<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ahorros.ahorrosForm.AhorrosFormFragment">

    <TextView
        android:id="@+id/tvFormAhorros"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvFormAhorrosNombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/tvNombre"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvFormAhorros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edtFormAhorrosNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/edtFormNombre"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvFormAhorrosNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvFormAhorroMontoInicial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/tvMonto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edtFormAhorrosNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edtFormAhorroMontoInicial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edtFormMonto"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormAhorroMontoInicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvFormAhorroMontoMeta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/tvMontoMeta"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edtFormAhorroMontoInicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edtFormAhorroMontoMeta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edtFormMonto"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormAhorroMontoMeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnAddFormAhorros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/edtFormAhorroMontoMeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/peso_normal">
    </Button>

    <Button
        android:id="@+id/btnCancelarformAhorros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/btnAddFormAhorros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/obesidad">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>