<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gastosFijos.gastoFijoForm.GastoFijoFormFragment">


    <TextView
        android:id="@+id/tvFormGastosFijos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvFormGastoFijosNombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/tvNombre"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvFormGastosFijos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edtFormGastosFijosNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/edtFormNombre"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvFormGastoFijosNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvFormGastosFijosMonto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/tvMonto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edtFormGastosFijosNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edtFormGastosFijosMonto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edtFormMonto"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormGastosFijosMonto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvFormGastosFijosFecha"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/tvFecha"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edtFormGastosFijosMonto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edtFormGastosFijosFecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormGastosFijosFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="none"
        android:focusable="false"/>

    <TextView
        android:id="@+id/tvFormGastosFijosEsServicio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="Es servicio:"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edtFormGastosFijosFecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/spFormGastosFijosEsServicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormGastosFijosEsServicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnAddFormGastosFijos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/spFormGastosFijosEsServicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/peso_normal">
    </Button>

    <Button
        android:id="@+id/btnCancelarFormGastosFijos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/btnAddFormGastosFijos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/obesidad">
    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>