<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.gastos.gastosForm.GastosFormFragment">


    <TextView
        android:id="@+id/tvFormGastos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvFormGastosNombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/tvNombre"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvFormGastos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edtFormaGastosNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/edtFormNombre"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvFormGastosNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvFormGastosMonto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="viewStart"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/tvMonto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edtFormaGastosNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edtFormaGastosMonto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edtFormMonto"
        android:inputType="numberDecimal"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvFormGastosMonto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spFormGastosTipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/edtFormaGastosMonto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spFormGastosTipo_pago"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/spFormGastosTipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spFormGastosEsAhorro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/spFormGastosTipo_pago"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/spFormGastosIdAhorro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/spFormGastosEsAhorro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/spFormGastosIdGasto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@+id/spFormGastosIdAhorro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnAddFormGastos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/btnAdd"
        app:layout_constraintTop_toBottomOf="@+id/spFormGastosIdGasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/peso_normal">
    </Button>

    <Button
        android:id="@+id/btnCancelarformGastos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/btnAddFormGastos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/obesidad">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>